[gd_scene load_steps=19 format=2]

[ext_resource path="res://cardset.png" type="Texture" id=1]
[ext_resource path="res://card.gd" type="Script" id=2]
[ext_resource path="res://chipLay3.ogg" type="AudioStream" id=3]
[ext_resource path="res://cardShove2.ogg" type="AudioStream" id=4]
[ext_resource path="res://cardShove4.ogg" type="AudioStream" id=5]
[ext_resource path="res://cardShove3.ogg" type="AudioStream" id=6]
[ext_resource path="res://cardPlace1.ogg" type="AudioStream" id=7]
[ext_resource path="res://cardPlace2.ogg" type="AudioStream" id=8]
[ext_resource path="res://cardPlace4.ogg" type="AudioStream" id=9]
[ext_resource path="res://cardPlace3.ogg" type="AudioStream" id=10]
[ext_resource path="res://cardSlide1.ogg" type="AudioStream" id=11]
[ext_resource path="res://cardSlide6.ogg" type="AudioStream" id=12]
[ext_resource path="res://cardSlide3.ogg" type="AudioStream" id=13]
[ext_resource path="res://cardSlide5.ogg" type="AudioStream" id=14]
[ext_resource path="res://cardSlide7.ogg" type="AudioStream" id=15]
[ext_resource path="res://cardSlide4.ogg" type="AudioStream" id=16]
[ext_resource path="res://cardSlide8.ogg" type="AudioStream" id=17]
[ext_resource path="res://cardSlide2.ogg" type="AudioStream" id=18]

[node name="Card1" type="Sprite"]
position = Vector2( 32, 48 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 9
hframes = 8
frame = 24
script = ExtResource( 2 )

[node name="InvalidClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DealSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -4.634

[node name="DealSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.634

[node name="DealSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -4.119

[node name="PlaySound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="PlaySound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="PlaySound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="PlaySound4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="TakeSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -4.119

[node name="TakeSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -4.119

[node name="TakeSound3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -4.119

[node name="TakeSound4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -4.119

[node name="TakeSound5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -4.119

[node name="TakeSound6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -4.119

[node name="TakeSound7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -4.119

[node name="TakeSound8" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -4.119

[node name="ClickSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -10.812
